login and register successfully user and admin both have open